[package]
name = "optional"
version = "0.0.12"
authors = ["Andre Bogus <bogusandre@gmail.com>"]
description = "This crate supplies a number of Option-like primitive types"
readme = "README.md"
keywords = ["option", "data"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/llogiq/optional"
documentation = "https://llogiq.github.io/optional/optional/index.html"

[lib]
name = "optional"
path = "src/lib.rs"

[features]
unstable = []

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "optbool"
harness = false

[[bench]]
name = "optioned"
harness = false
