[package]
name = "optional"
version = "0.5.0"
authors = ["Andre Bogus <bogusandre@gmail.com>"]
description = "This crate supplies a number of Option-like primitive types"
readme = "README.md"
keywords = ["option", "data"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/llogiq/optional"
documentation = "https://docs.rs/optional"
categories = ["data-structures"]

[badges]
travis-ci = { repository = "llogiq/optional" }

[lib]
name = "optional"
path = "src/lib.rs"

[features]
unstable = []

[dependencies]
serde = { version = "1.0.106", optional = true }

[dev-dependencies]
bencher = "0.1.5"
serde_json = "1.0.51"

[[bench]]
name = "optbool"
harness = false

[[bench]]
name = "optioned"
harness = false
